--- a/portfolio/pubspec.yaml
+++ b/portfolio/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   google_fonts: ^4.0.4
   flutter_svg: ^1.0.3
   animated_text_kit: ^4.2.1
+  url_launcher: ^6.0.20
 
 dev_dependencies:
   flutter_test:
