--- a/portfolio/pubspec.yaml
+++ b/portfolio/pubspec.yaml
@@ -39,7 +39,9 @@ dependencies:
   flutter_svg: ^1.0.3
   animated_text_kit: ^4.2.1
   url_launcher: ^6.0.20
+  visibility_detector: ^0.2.2
 
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
