--- a/portfolio/pubspec.yaml
+++ b/portfolio/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   animated_text_kit: ^4.2.1
   url_launcher: ^6.0.20
   visibility_detector: ^0.2.2
+  firebase_core: ^2.27.0
 
   
 dev_dependencies:
