--- a/.github/workflows/firebase-hosting-deploy.yml
+++ b/.github/workflows/firebase-hosting-deploy.yml
@@ -1,30 +1,31 @@
-name: Deploy Flutter Web App to Firebase Hosting
+name: Flutter Portfolio  # Change the name here
 
 on:
   push:
     branches:
-      - main  # Deploy on push to the main branch (you can change this to your preferred branch)
+      - main  # Deploy on push to the main branch
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v4  # Use the latest version
 
-    - name: Set up Flutter
-      uses: subosito/flutter-action@v2
-      with:
-        flutter-version: 'stable'
+      - name: Set up Flutter
+        uses: subosito/flutter-action@v3  # Ensure you are using the latest version
+        with:
+          flutter-version: '3.16.5'  # Specify the Flutter version
 
-    - name: Install dependencies
-      run: flutter pub get
+      - name: Install dependencies
+        run: flutter pub get
 
-    - name: Build Flutter Web App
-      run: flutter build web
+      - name: Build Flutter Web App
+        run: flutter build web
 
-    - name: Deploy to Firebase Hosting
-      run: firebase deploy --only hosting
-      env:
-        FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
+      - name: Deploy to Firebase Hosting
+        run: firebase deploy --only hosting
+        env:
+          FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
+
