--- a/.github/workflows/firebase-hosting-deploy.yml
+++ b/.github/workflows/firebase-hosting-deploy.yml
@@ -14,18 +14,20 @@ jobs:
         uses: actions/checkout@v4  # Use the latest version
 
       - name: Set up Flutter
-        uses: subosito/flutter-action@v2  # Ensure you are using the latest version
+        uses: subosito/flutter-action@v2  # Use v2 as the latest version
         with:
           flutter-version: '3.16.5'  # Specify the Flutter version
 
       - name: Install dependencies
         run: flutter pub get
+        working-directory: portfolio  # Set working directory to your project folder
 
       - name: Build Flutter Web App
         run: flutter build web
+        working-directory: portfolio  # Set working directory to your project folder
 
       - name: Deploy to Firebase Hosting
         run: firebase deploy --only hosting
         env:
           FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
-
+        working-directory: portfolio  # Set working directory to your project folder
