--- a/.github/workflows/firebase-hosting-deploy.yml
+++ b/.github/workflows/firebase-hosting-deploy.yml
@@ -18,6 +18,9 @@ jobs:
         with:
           flutter-version: '3.16.5'  # Specify the Flutter version
 
+      - name: Install Firebase CLI
+        run: npm install -g firebase-tools  # Install Firebase CLI globally
+
       - name: Install dependencies
         run: flutter pub get
         working-directory: portfolio  # Set working directory to your project folder
@@ -29,5 +32,5 @@ jobs:
       - name: Deploy to Firebase Hosting
         run: firebase deploy --only hosting
         env:
-          FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
+          FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}  # Ensure the Firebase token is set
         working-directory: portfolio  # Set working directory to your project folder
